# elea

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
elea/: CMakeLists.txt  aabox.c  aabox.h  collision.c  collision.h  color.c  color.h  geometry.c  geometry.h  matrix3x3.c  matrix3x3.h  matrix3x4.c  matrix3x4.h  matrix4x4.c  matrix4x4.h  plane.c  plane.h  polyhedron.h  quaternion.c  quaternion.h  ray.c  ray.h  types.h  vector2.c  vector2.h  vector3.c  vector3.h  vector4.c  vector4.h
